# qchem_core

./: .gitignore  README.md  plan.txt  pyproject.toml
.github/workflows/: tests.yml
qchem/: __init__.py  basis.py  linalg.py  molecule.py
qchem/dft/: grid.py  ks.py  xc.py
qchem/dft/tests/: test_grid.py  test_ks.py  test_xc.py
qchem/integrals/: __init__.py  boys.py  eri.py  kinetic.py  nuclear.py  overlap.py
qchem/integrals/tests/: test_boys.py  test_eri.py  test_kinetic.py  test_nuclear.py  test_overlap.py
qchem/scf/: __init__.py  density.py  diis.py  fock.py  hartree_fock.py
qchem/scf/tests/: test_density.py  test_diis.py  test_fock.py  test_hartree_fock.py
qchem/tests/: test_basis.py  test_molecule.py
